After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686033 - core: Don't crash with NULL options in _resolve()
core: Don't crash with NULL options in _resolve()
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
git master
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-12 14:21 UTC by Bastien Nocera
Modified: 2012-10-18 14:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Don't crash with NULL options in _resolve() (830 bytes, patch)
2012-10-12 14:21 UTC, Bastien Nocera
none Details | Review
core: Check valid options in operations (834 bytes, patch)
2012-10-17 09:11 UTC, Juan A. Suarez Romero
committed Details | Review
core: Check valid options in operations (2.51 KB, patch)
2012-10-18 14:58 UTC, Juan A. Suarez Romero
committed Details | Review

Description Bastien Nocera 2012-10-12 14:21:46 UTC
.
Comment 1 Bastien Nocera 2012-10-12 14:21:48 UTC
Created attachment 226333 [details] [review]
core: Don't crash with NULL options in _resolve()
Comment 2 Juan A. Suarez Romero 2012-10-17 09:11:42 UTC
Created attachment 226616 [details] [review]
core: Check valid options in operations
Comment 3 Juan A. Suarez Romero 2012-10-17 09:13:07 UTC
(In reply to comment #2)
> Created an attachment (id=226616) [details] [review]
> core: Check valid options in operations

We need to check it in all operations. Also, we need to ensure the options are valid.
Comment 4 Juan A. Suarez Romero 2012-10-17 09:14:08 UTC
commit 52da21f5443079fb0d5d049c38e127925281802f
Author: Juan A. Suarez Romero <jasuarez@igalia.com>
Date:   Wed Oct 17 09:11:05 2012 +0000

    core: Check valid options in operations
    
    https://bugzilla.gnome.org/show_bug.cgi?id=686033

 src/grl-source.c |    1 +
 1 file changed, 1 insertion(+)


Attachment 226616 [details] pushed as 52da21f - core: Check valid options in operations
Comment 5 Juan A. Suarez Romero 2012-10-18 14:58:44 UTC
Created attachment 226747 [details] [review]
core: Check valid options in operations

This is the right fix bug #686033, instead of commit
52da21f5443079f.
Comment 6 Juan A. Suarez Romero 2012-10-18 14:59:48 UTC
This is the fix for this bug.

I commited a previous one by mistake..