core: Check valid options in operations

https://bugzilla.gnome.org/show_bug.cgi?id=686033